# engine

./: .gitignore  ASYNC_STREAMS_GUIDE.md  CLAUDE.md  COMPRESSION_UTILITY_DESIGN.md  CONFIGURATION_MANAGEMENT_BLUEPRINT.md  Cargo.toml  DISTRIBUTED_ARCHITECTURE_DESIGN.md  DOCKER_SETUP.md  ERROR_HANDLING_SUMMARY.md  GRAMMAR_REDESIGN.md  IMPLEMENTATION_GUIDE.md  INCREMENTAL_CHECKPOINTING_GUIDE.md  LICENSE-MIT  MILESTONES.md  NOTICE  PARSER_ANALYSIS.md  README.md  REDIS_PERSISTENCE_STATUS.md  ROADMAP.md  STATEFUL_COMPONENTS_ANALYSIS.md  STATE_MANAGEMENT_DESIGN.md  STATE_MANAGEMENT_IMPLEMENTATION.md  build.rs  docker-compose.yml
.github/workflows/: rust.yml
docs/: writing_extensions.md
examples/: extension.siddhi  join.siddhi  length_window.siddhi  partition.siddhi  pattern.siddhi  persistence.eventflux  run_sample.sh  sample.siddhi  simple_filter.eventflux  table.siddhi  time_window.eventflux  time_window.siddhi  trigger.eventflux
feat/: README.md
feat/async_streams/: ASYNC_STREAMS.md
feat/distributed/: DISTRIBUTED.md
feat/error_handling/: ERROR_HANDLING.md
feat/grammar/: GRAMMAR.md  README.md
feat/implementation/: IMPLEMENTATION.md
feat/state_management/: STATE_MANAGEMENT.md
proto/: transport.proto
src/: lib.rs
src/core/: README.md  data_source.rs  eventflux_app_runtime.rs  eventflux_app_runtime_builder.rs  eventflux_manager.rs  mod.rs  siddhi_app_runtime.rs  siddhi_app_runtime_builder.rs  siddhi_manager.rs  store.rs
src/core/aggregation/: aggregation_input_processor.rs  aggregation_runtime.rs  base_incremental_value_store.rs  incremental_data_aggregator.rs  incremental_data_purger.rs  incremental_executor.rs  incremental_executors_initialiser.rs  mod.rs
src/core/config/: README.md  error.rs  eventflux_app_context.rs  eventflux_context.rs  eventflux_on_demand_query_context.rs  eventflux_query_context.rs  hot_reload.rs  loader.rs  manager.rs  mod.rs  monitoring.rs  processor_config_reader.rs  resolver.rs  security.rs  service_discovery.rs  siddhi_app_context.rs  siddhi_context.rs  siddhi_on_demand_query_context.rs  siddhi_query_context.rs  statistics_configuration.rs  validation_api.rs  validator.rs
src/query_api/: annotation.rs  constants.rs  error.rs  eventflux_app.rs  eventflux_element.rs  mod.rs  siddhi_app.rs  siddhi_element.rs
src/query_compiler/: eventflux_compiler.rs  grammar.lalrpop  mod.rs  siddhi_compiler.rs
src/sql_compiler/: application.rs  catalog.rs  converter.rs  ddl.rs  error.rs  expansion.rs  mod.rs  preprocessor.rs  type_mapping.rs
tests/: README.md  aggregator_window.rs  app_annotation.rs  app_runner_aggregations.rs  app_runner_async_junction.rs  app_runner_async_pool_stress.rs  app_runner_complex_app.rs  app_runner_event_ser.rs  app_runner_functions.rs  app_runner_joins.rs  app_runner_output_rate.rs  app_runner_partition_stress.rs  app_runner_partitions.rs  app_runner_patterns.rs  app_runner_persistence.rs  app_runner_selector.rs  app_runner_stress.rs  app_runner_tables.rs  app_runner_triggers.rs  app_runner_windows.rs  async_annotation_tests.rs  auto_sink_initialization_test.rs  builtin_function_parsing.rs  cache_table.rs  compare_expression.rs  data_source_init.rs  distributed_grpc_integration.rs  distributed_redis_state.rs  distributed_tcp_integration.rs  dynamic_ext_integration.rs  error_routing.rs  event_chain_clone.rs  expression_parser_complex.rs  extensions.rs  file_persistence.rs  function_executors.rs  grammar_expression.rs  in_expression_executor.rs  in_memory_table.rs  incremental_aggregation.rs  (+34 more)
tests/common/: mod.rs
tests/custom_dyn_ext/: Cargo.toml
(+308 files in other folders)
