[package]
name = "siddhi_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
crossbeam-channel = "0.5"
lalrpop-util = { version = "0.20", features = ["lexer"] }
chrono = "0.4"
cron = "0.11"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
rayon = "1"
num_cpus = "1"

[build-dependencies]
lalrpop = "0.20"
