[package]
name = "siddhi_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
crossbeam-channel = "0.5"
crossbeam = "0.8"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
lalrpop-util = { version = "0.20", features = ["lexer"] }
chrono = "0.4"
cron = "0.11"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
num_cpus = "1"
once_cell = "1"
rusqlite = { version = "0.29", features = ["bundled"] }
libloading = "0.8"
clap = { version = "4", features = ["derive"] }
thiserror = "1.0"
lz4 = "1.24"
snap = "1.1"
zstd = "0.13"
thread_local = "1.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

[build-dependencies]
lalrpop = "0.20"

[dev-dependencies]
tempfile = "3"
custom_dyn_ext = { path = "tests/custom_dyn_ext" }
